--- a/ParaModel/ParaModel.qrc
+++ b/ParaModel/ParaModel.qrc
@@ -14,6 +14,8 @@
         <file>res/shaders/wall.vert</file>
         <file>res/shaders/window.frag</file>
         <file>res/shaders/window.vert</file>
+        <file>res/shaders/WarheadColumn.frag</file>
+        <file>res/shaders/WarheadColumn.vert</file>
     </qresource>
     <qresource prefix="/qss">
         <file>res/qss/black.css</file>
