实现opengl实例化快速绘制多个破片球

--- a/ParaModel/ParaModel.qrc
+++ b/ParaModel/ParaModel.qrc
@@ -16,6 +16,8 @@
         <file>res/shaders/window.vert</file>
         <file>res/shaders/WarheadColumn.frag</file>
         <file>res/shaders/WarheadColumn.vert</file>
+        <file>res/shaders/WarheadSphere.frag</file>
+        <file>res/shaders/WarheadSphere.vert</file>
     </qresource>
     <qresource prefix="/qss">
         <file>res/qss/black.css</file>
